# gDel3D

./: CMakeLists.txt  GDelFlipping.sln  README.md  run.sh
GDelFlipping/: GDelFlipping.vcxproj  GDelFlipping.vcxproj.filters
GDelFlipping/src/: DelaunayChecker.cpp  DelaunayChecker.h  Demo.cpp  InputCreator.cpp  InputCreator.h  RandGen.cpp  RandGen.h
GDelFlipping/src/gDel3D/: CommonTypes.h  GpuDelaunay.cu  GpuDelaunay.h  PerfTimer.h
GDelFlipping/src/gDel3D/CPU/: CPUDecl.h  PredWrapper.cpp  PredWrapper.h  Splaying.cpp  Splaying.h  Star.cpp  Star.h  predicates.cpp  predicates.h
GDelFlipping/src/gDel3D/GPU/: CudaWrapper.h  DPredWrapper.h  GPUDecl.h  HostToKernel.h  KerCommon.h  KerDivision.cu  KerDivision.h  KerPredWrapper.h  KerPredicates.cu  KerPredicates.h  KerShewchuk.h  ThrustWrapper.cu  ThrustWrapper.h
